complete rehaul, added resizeablility compatability, fixed content overflow

--- a/style.css
+++ b/style.css
@@ -8,239 +8,176 @@
 #wrapper {
     margin-left: auto;
     margin-right: auto;
-    width: auto;
+    width: 960px;
+    color: white;
+    padding: 10px 100px;
 }
 
 body {
     height: 100vh;
-    background: linear-gradient(180deg, #1f2937 30%, white 30%);
+    background: linear-gradient(180deg, #1f2937 35%, white 30%);
 }
 
-.header {
-    display: flex;
-    justify-content: space-between;
-    color: white;
-    width: 100%;
-    font-size: 12px;
-    padding-top: 10px;
-}
-
-.header-left {
-    margin-left: 75px;
- 
-    font-weight: bold;
-}
-
-.header-right {
+#headerRight {
     display: inline-flex;
-    position: fixed;
-    padding-left: 422px;
-    padding-right: 25px;
-    top: 10px;
-    width: 100%;
-    gap: 15px;
+    float: right;
+    margin-top: -25px;
+    gap: 25px;
 }
 
-.titlemain {
-    display: flex;
-    width: 350px;
+#headerText {
     font-size: 14px;
-    margin-left: 75px;
-    margin-top: 35px;
-    color: white;
+    width: 250px;
+    padding-top: 40px;
+    margin: 0;
 }
 
-.titletext {
-    display: inline-flex;
-    width: 350px;
+#headerSubText {
     font-size: 14px;
-    margin-left: 75px;
-    color: white;
+    width: 250px;
+    margin: 0;
+    padding-bottom: 5px;
 }
 
-#a1{
-    display: inline-flex;
-    position: fixed;
-    justify-content: end;
-    padding-left: 3%;
-    top: 7%;
-    width: 20%;
-}
-
-.img1 {
-    display: inline-flex;
-    justify-content: center;
-    position: fixed;
-    padding-left: 3%;
-    top: 7%;
-    width: auto;
-}
-
-button {
-    font-weight: bold;
-    font-size: 12px;
-    padding: 5px 24px;
+.btn1 {
+    background-color: #3b82f6;
     border-radius: 8px;
-    outline: none;
-    border: none;
-    background: rgba(59, 122, 240, 0.959);
+    border-color: black;
+    border-style: solid;
+    height: 30px;
+    width: 90px;
     color: white;
-    margin-left: 75px;
-    margin-top: 10px;
 }
-.header1{
+
+#img1 {
+    display: inline-flex;
+    float: right;
+    margin-top: -160px;
+}
+
+#randomInfo {
     display: flex;
-   justify-content: center;
-   font-size: 10px;
-   padding-top: 75px;
-   margin-top: 0px;
+    justify-content: center;
+    align-content: center;
+    font-size: 12px;
+    margin-top: 10%;
+    color: black;
 }
-.boxes{
+
+#boxes {
     display: flex;
     justify-content: center;
     width: auto;
+    gap: 40px;
 }
 
-.box1{
+.box1 {
     margin: 20px;
-    width: 85px;
-    height: 90px;
-    border-style: solid;
-    border-color: rgb(22, 150, 235);
-    border-radius: 8px;
-    
-}
-.box2{
-    margin: 20px;
-    width: 85px;
-    height: 90px;
-    border-style: solid;
-    border-color: rgb(22, 150, 235);
-    border-radius: 8px;
-    
-}
-.box3{
-    margin: 20px;
-    width: 85px;
-    height: 90px;
+    width: 65px;
+    height: 70px;
     border-style: solid;
     border-color: rgb(22, 150, 235);
     border-radius: 8px;
 
-    
 }
-.box4{
+
+.box2 {
     margin: 20px;
-    width: 85px;
-    height: 90px;
+    width: 65px;
+    height: 70px;
+    border-style: solid;
+    border-color: rgb(22, 150, 235);
+    border-radius: 8px;
+
+}
+
+.box3 {
+    margin: 20px;
+    width: 65px;
+    height: 70px;
+    border-style: solid;
+    border-color: rgb(22, 150, 235);
+    border-radius: 8px;
+
+
+}
+
+.box4 {
+    margin: 20px;
+    width: 65px;
+    height: 70px;
     border-style: solid;
     border-color: rgb(22, 150, 235);
     border-radius: 8px;
 }
-.subtext{
-    display: flex; 
-    justify-content: center;
-    align-items: center;
-    margin:auto;
+
+#subText {
+    color: black;
+    display: flex;
+    width: 75%;
+    gap: 30px;
+    margin-left: 15%;
     margin-top: -15px;
     font-size: 12px;
-    gap: 50px;
-    width: 450px;
-    }
+    padding-bottom: 2%;
 
-    #qback{
-        display: flex;
-        background: rgb(218, 216, 216);
-        height: 150px;
-        margin-top: 30px;
-        justify-content: center;
-        width: auto;
-    }
+}
 
-    .quote{
-        display: inline-flex;
-        align-items: center;
-        font-size: 16px;
-        max-width: 400px;
-        margin-left: 18%;
-        min-width: 600px;
-    }
-    #thor1{
-        display: flex;
-        justify-content: end ;
-        width: auto;
-        
-    }
-    .thor{
-        display: flex;
-        justify-content: end;
-        font-weight: bold;
-        font-size: 14px;
-        margin-top: 90px;
-        margin-right: 210px;
-        padding-bottom: 10px;
-        max-width: 100%;
-        max-height: none;
-        width: 20px;
-    }
+#quote {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-size: 17px;
+    font-style: italic;
+    background-color: #e5e7eb;
+    padding-left: 130px;
+    padding-right: 130px;
+    margin-bottom: 5%;
+    height: 150px;
+    width: 740px;
+    box-sizing: border-box;
+}
 
-    .notice{
-        display: flex;
-        justify-content: center;
-        background:rgb(59, 122, 240, 0.959);
-        padding: 43px;
-        height: 90px;
-        width: 70%;
-        max-width: auto;
-        min-width:600px ;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 35px;
-    }
+#thor {
+    font-size: 12px;
+    font-weight: bold;
+}
 
-    .cta{
-        display: inline-flex;
-        justify-content: flex-start;
-        align-items: center;
-        position: fixed;
-        bottom: 18%;
-        left: 20%;
-        z-index: 1;
-        min-width: none;
-        color: white;
-        font-weight: bold;
-        font-size: 14px;
-        min-width: 400px;
-        max-width: 600px;
+#cta {
+    background-color: #3b82f6;
+    box-sizing: border-box;
+    border-radius: 24px;
+    font-weight: bold;
+    margin-left: -125px;
+    padding-top: 2%;
+    padding-left: 80px;
+    width: 960px;
+    height: 90px;
+}
 
-    }
-    .subcta{
-        display: flex;
-        justify-content: flex-start;
-        color: white;
-        position: fixed;
-        bottom: 12%;
-        left: 20%;
-        font-size: small;
-        width: 100%;
-        min-width: 200px;
-        max-width: 200px;
-    
-    }
+#subCta {
+    color: white;
+    margin-left: -50px;
+    margin-top: -50px;
+}
 
-    .button3{
-        display: flex;
-        justify-content: end;
-        align-content: center;
-        position: absolute;
-        right: 15%;
-        bottom: 145px;
-        width:100% !important;
-        height: 50px;
-        padding-left: 53%;
-        
-       
-    }
+.btn2 {
+    display: flex;
+    background-color: #3b82f6;
+    justify-content: center;
+    border: black;
+    color: white;
+    border-style: solid;
+    border-radius: 8px;
+    float: right;
+    margin-top: -30px;
+    margin-right: 25px;
+    width: 90px;
+    height: 30px;
+    padding-top: 3px;
+}
+
 
 .footer {
     display: inline-flex;
@@ -249,9 +186,9 @@ button {
     color: white;
     font-size: 12px;
     position: absolute;
-    bottom: 0;
     right: 0;
+    bottom: 0px;
     width: 100%;
-    height: 60px;
+    height: 40px;
     background: #1f2937
 }
